--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
 
       <footer>
         <p>Resume generated using HTML & CSS</p>
+        <p>
+        查看履歷網站： 
+        <a href="https://wei0731-95.github.io/resume/" target="_blank">
+          點我前往
+    </a>
+</p>
+
       </footer>
     </div>
   </body>
